--- a/webapp/front/front/src/app/features/admin/admin-information-page/admin-information-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-information-page/admin-information-page.component.html
@@ -1,82 +1,158 @@
 <div class="column-middle">
 
-    <!-- Contact Information -->
-    <div class="cool-static-container m-b-20" style="word-wrap: break-word;">
+  <!-- Contact Information -->
+  <div class="cool-static-container m-b-20" style="word-wrap: break-word;">
+    <div class="f-r-sb-c mb-4">
       <p class="mb-3 font-weight-bold c-text font-size-16">Contact Information</p>
-  
-      <!-- If no phone numbers -->
-      <div class="no-posts-found" *ngIf="phoneNumbersList?.length === 0">
-        <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-        Information not found
-      </div>
-  
-      <!-- Otherwise, show table -->
-      <div class="d-flex flex-column justify-content-center align-items-center w-100" *ngIf="phoneNumbersList?.length > 0">
-        <table class="table-striped w-100">
-          <tr>
-            <th class="day">Name</th>
-            <th>Address</th>
-            <th>Phone Number</th>
-            <th></th>
-          </tr>
-          <tr *ngFor="let contact of phoneNumbersList">
-            <td class="day">{{ contact.contactName }}</td>
-            <td>{{ contact.contactAddress }}</td>
-            <td>{{ contact.contactPhone }}</td>
-            <td>
-              <!-- Example delete button -->
-              <button class="btn btn-link" (click)="deleteContact(contact.contactId)">
-                <i class="fas fa-trash" style="color: var(--error);"></i>
-              </button>
-            </td>
-          </tr>
-        </table>
-      </div>
-  
+
       <!-- Add contact button -->
-      <div class="add-button m-t-40">
-        <button class="cool-button cool-small on-bg" (click)="goToCreateContact()">
-          Add <i class="fas fa-plus"></i>
+      <button class="cool-feed-button " (click)="openCreateContactDialog()">
+        Add Contact Info <i class="fas fa-plus"></i>
+      </button>
+    </div>
+
+    <!-- If no phone numbers -->
+    <div class="no-posts-found" *ngIf="phoneNumbersList?.length === 0">
+      <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+      Information not found
+    </div>
+
+    <!-- Otherwise, show table -->
+    <div class="d-flex flex-column justify-content-center align-items-center w-100"
+      *ngIf="phoneNumbersList?.length > 0">
+      <table class="table-striped w-100">
+        <tr>
+          <th class="day">Name</th>
+          <th>Address</th>
+          <th>Phone Number</th>
+          <th></th>
+        </tr>
+        <tr *ngFor="let contact of phoneNumbersList">
+          <td class="day">{{ contact.name }}</td>
+          <td>{{ contact.address }}</td>
+          <td>{{ contact.phoneNumber }}</td>
+          <td>
+            <!-- Example delete button -->
+            <button class="btn btn-link" (click)="deleteContact(contact.self)">
+              <i class="fas fa-trash" style="color: var(--error);"></i>
+            </button>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <!-- Paginator for contacts -->
+    <div class="d-flex justify-content-center mt-3" *ngIf="contactTotalPages > 1">
+      <!-- app-paginator is assumed to exist in your project -->
+      <app-paginator [totalPages]="contactTotalPages" [currentPage]="contactCurrentPage" [pageSize]="contactPageSize"
+        (pageChange)="onContactPageChange($event)"></app-paginator>
+    </div>
+
+
+  </div>
+
+  <!-- Add resource button -->
+  <div class="upper-feed-buttons-box m-b-20">
+    <button class="cool-feed-button" (click)="goToCreateResource()">
+      Add Resource <i class="fa-solid fa-plus"></i>
+    </button>
+  </div>
+
+  <!-- Resources list -->
+  <div class="no-posts-found" *ngIf="resourceList?.length === 0">
+    <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+    Resources not found
+  </div>
+
+  <div *ngFor="let resource of resourceList" class="cool-static-container m-b-20" style="word-wrap: break-word;">
+    <div class="f-r-sb-c">
+      <div class="">
+        <h2>{{ resource.title }}</h2>
+      </div>
+      <div class="">
+        <button class="btn btn-link" (click)="deleteResource(resource.self)">
+          <i class="fas fa-trash" style="color: var(--error);"></i>
         </button>
       </div>
     </div>
-  
-    <!-- Add resource button -->
-    <div class="upper-feed-buttons-box m-b-20">
-      <button class="cool-feed-button" (click)="goToCreateResource()">
-        Add Resource <i class="fa-solid fa-plus"></i>
-      </button>
+    <div class="divider"></div>
+    <h3 style="font-weight: normal">{{ resource.description }}</h3>
+
+    <!-- If the resource has an image string -->
+    <div class="d-flex flex-column justify-content-center align-items-center w-100" *ngIf="resource.image">
+      <img [src]="resource.image" style="max-width: 100%; max-height: 100vh; border-radius: 5px;"
+        [alt]="'resource_' + resource.self + '_img'" />
     </div>
-  
-    <!-- Resources list -->
-    <div class="no-posts-found" *ngIf="resourceList?.length === 0">
-      <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-      Resources not found
-    </div>
-  
-    <div *ngFor="let resource of resourceList" class="cool-static-container m-b-20" style="word-wrap: break-word;">
-      <div class="row">
-        <div class="col-md-8">
-          <h2>{{ resource.title }}</h2>
-        </div>
-        <div class="col-md-4 text-right">
-          <button class="btn btn-link" (click)="deleteResource(resource.resourceId)">
-            <i class="fas fa-trash" style="color: var(--error);"></i>
-          </button>
-        </div>
-      </div>
-      <div class="divider"></div>
-      <h3 style="font-weight: normal">{{ resource.description }}</h3>
-      <div class="d-flex flex-column justify-content-center align-items-center w-100">
-        <div *ngIf="resource.imageId">
-          <img
-            [src]="getResourceImageUrl(resource.imageId)"
-            style="max-width: 100%; max-height: 100vh; border-radius: 5px;"
-            [alt]="'resource_' + resource.imageId + '_img'"
-          />
-        </div>
-      </div>
-    </div>
-  
   </div>
-  
+
+  <!-- Paginator for resources -->
+  <div class="d-flex justify-content-center mt-3" *ngIf="resourceTotalPages > 1">
+    <app-paginator [totalPages]="resourceTotalPages" [currentPage]="resourceCurrentPage" [pageSize]="resourcePageSize"
+      (pageChange)="onResourcePageChange($event)"></app-paginator>
+  </div>
+
+</div>
+
+
+<!-- DIALOG for Creating a Contact -->
+<div class="dialog" [ngClass]="{ 'show-dialog': showCreateContactDialog }">
+  <div class="dialog-content">
+    <div class="dialog-header">
+      <h3 class="font-size-20 font-weight-bold" style="color: var(--primary)">
+        Create Contact
+      </h3>
+    </div>
+
+    <!-- Close button -->
+    <a class="close-button" (click)="closeCreateContactDialog()">
+      <i class="fas fa-close"></i>
+    </a>
+
+    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
+      <div class="form-column" style="margin-top:1rem;">
+        <!-- Contact Name -->
+        <div class="form-group">
+          <input formControlName="contactName" class="cool-input" placeholder="Contact Name" type="text" />
+          <div class="form-row form-error" *ngIf="contactNameControl?.invalid && contactNameControl?.touched">
+            <p class="error" *ngIf="contactNameControl?.hasError('required')">
+              Name is required.
+            </p>
+            <p class="error" *ngIf="contactNameControl?.hasError('maxlength')">
+              Name cannot exceed 50 characters.
+            </p>
+          </div>
+        </div>
+
+        <!-- Contact Address -->
+        <div class="form-group">
+          <input formControlName="contactAddress" class="cool-input" placeholder="Contact Address" type="text" />
+          <div class="form-row form-error" *ngIf="addressControl?.invalid && addressControl?.touched">
+            <p class="error" *ngIf="addressControl?.hasError('required')">
+              Address is required.
+            </p>
+            <p class="error" *ngIf="addressControl?.hasError('maxlength')">
+              Address cannot exceed 50 characters.
+            </p>
+          </div>
+        </div>
+
+
+        <!-- Contact Phone -->
+        <div class="form-group">
+          <input formControlName="contactPhone" class="cool-input" placeholder="Contact Phone" type="text" />
+          <div class="form-row form-error" *ngIf="phoneControl?.invalid && phoneControl?.touched">
+            <p class="error">Phone is required</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Submit Button -->
+      <div class="d-flex justify-content-center mt-4">
+        <button type="submit" class="w-75 cool-button pure filled-interesting square-radius font-size-14 "
+          style="height:40px;">
+          Create
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
