--- a/webapp/front/front/src/app/features/admin/admin-sidebar/admin-sidebar.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-sidebar/admin-sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="f-c-c-c">
             <a [routerLink]="'/posts'" class="cool-left-button admin-button f-r-sb-c">
                 <i class="fa-solid fa-chevron-left mr-5"></i>
-                <span class="text-end">Leave Admin</span>
+                <span class="text-end">Leave Admin Panel</span>
             </a>
             <a [routerLink]="'/admin/announcement/new'" class="cool-left-button admin-button f-r-sb-c"
                 [ngClass]="{'active': isActive('/admin/announcement/new')}">
@@ -14,7 +14,7 @@
             <a [routerLink]="'/admin/neighbors/requests'" class="cool-left-button admin-button f-r-sb-c"
                 [ngClass]="{'active': isActive('/admin/neighbors/requests')}">
                 <i class="fa-solid fa-user-check m-r-5"></i>
-                <span class="text-end">Requests</span>
+                <span class="text-end">Neighbor Requests</span>
             </a>
             <a [routerLink]="'/admin/neighbors'" class="cool-left-button admin-button f-r-sb-c"
                 [ngClass]="{'active': isActive('/admin/neighbors')}">
@@ -24,12 +24,12 @@
             <a [routerLink]="'/admin/service-providers/requests'" class="cool-left-button admin-button f-r-sb-c"
                 [ngClass]="{'active': isActive('/admin/service-providers/requests')}">
                 <i class="fa-solid fa-clipboard-check"></i>
-                <span class="text-end">Worker Requests</span>
+                <span class="text-end">Provider Requests</span>
             </a>
             <a [routerLink]="'/admin/service-providers'" class="cool-left-button admin-button f-r-sb-c"
                 [ngClass]="{'active': isActive('/admin/service-providers')}">
                 <i class="fa-solid fa-hard-hat m-r-5"></i>
-                <span class="text-end">Workers</span>
+                <span class="text-end">Provider List</span>
             </a>
             <div class="divider"></div>
             <a [routerLink]="'/admin/amenities'" class="cool-left-button admin-button f-r-sb-c"
@@ -47,7 +47,7 @@
             <a [routerLink]="'/admin/calendar/events/create'" class="cool-left-button admin-button f-r-sb-c"
                 [ngClass]="{'active': isActive('/admin/calendar/events/create')}">
                 <i class="fas fa-calendar-days m-r-5"></i>
-                <span class="text-end">Calendar</span>
+                <span class="text-end">Create Event</span>
             </a>
         </div>
     </div>
