--- a/webapp/front/front/src/app/features/admin/admin-amenity-create-page/admin-amenity-create-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-amenity-create-page/admin-amenity-create-page.component.html
@@ -2,9 +2,7 @@
     <h2 class="card-title">Create New Amenity</h2>
     <div class="divider"></div>
     <div>
-        <!-- Angular form in place of spring:form -->
         <form [formGroup]="amenityForm" (ngSubmit)="onSubmit()" novalidate>
-
             <!-- Amenity Name -->
             <div class="d-flex flex-column justify-content-between align-items-center mb-2 mt-2">
                 <div class="form-row">
@@ -27,46 +25,39 @@
             <p class="m-t-40">Amenity Hours</p>
             <div class="divider"></div>
 
-            <!-- Potential place for overall form errors -->
-            <div class="f-c-c-c w-100 m-t-40">
-                <!-- <p class="error" *ngIf="formErrorMsg">{{ formErrorMsg }}</p> -->
-            </div>
-
-            <!-- Action buttons for 9-17, Clear weekend, Clear all -->
+            <!-- Action buttons -->
             <div class="f-r-sb-c w-100 pl-3 pr-3">
                 <a (click)="check9to5()" class="w-100 cool-button cool-small on-bg">9-17</a>
                 <a (click)="uncheckWeekends()" class="w-100 cool-button red">Clear weekend</a>
                 <a (click)="clearAllCheckedHours()" class="w-100 cool-button red">Clear all</a>
             </div>
 
-            <!-- Time Table -->
+            <!-- Time Table (Dynamic) -->
             <div class="cool-table w-100 p-4">
                 <table>
                     <tr>
                         <th>Row</th>
-                        <th>Mo</th>
-                        <th>Tu</th>
-                        <th>We</th>
-                        <th>Th</th>
-                        <th>Fr</th>
-                        <th>Sa</th>
-                        <th>Su</th>
+                        <!-- Header columns for unique days -->
+                        <th *ngFor="let day of uniqueDays">
+                            {{ getAbbreviatedDay(day) }}
+                        </th>
                     </tr>
 
-                    <tr *ngFor="let time of timesPairs; let rowIndex = index">
+                    <!-- For each time as a row -->
+                    <tr *ngFor="let time of uniqueTimes; let rowIndex = index">
                         <td>
                             <label class="container">
-                                <input type="checkbox" (click)="toggleRow(rowIndex)" />
+                                <!-- Toggle entire row (time) -->
+                                <input type="checkbox" [checked]="isRowSelected(time)" (click)="toggleRow(time)" />
                             </label>
                         </td>
 
-                        <td *ngFor="let day of daysPairs">
-                            <div class="cat creation">
-                                <label class="w-100">
-                                    <!-- <input type="checkbox" [checked]="isShiftSelected(day.key, time.key)"
-                                            (change)="onShiftChange(day.key, time.key, $event.target.checked)" />
-                                        <span>{{ time.value.key }}</span> -->
-                                </label>
+                        <!-- For each day, show a cell you can toggle -->
+                        <td *ngFor="let day of uniqueDays" [class.selected]="isShiftSelectedByDayTime(day, time)">
+                            <div class="cell-wrapper" (click)="toggleCellSelection(day, time)">
+                                <!-- Invisible checkbox for accessibility -->
+                                <input type="checkbox" [checked]="isShiftSelectedByDayTime(day, time)"
+                                    class="hidden-checkbox" />
                             </div>
                         </td>
                     </tr>
@@ -84,7 +75,7 @@
 
             <!-- Submit button -->
             <div class="d-flex justify-content-end m-t-40">
-                <button id="submit-checks" type="submit" class="cool-button cool-small on-bg w-25" style="height:40px;"
+                <button id="submit-checks" type="submit" class="cool-button cool-small on-bg w-25" style="height: 40px;"
                     [disabled]="!anyShiftChecked">
                     Create
                 </button>
