--- a/webapp/front/front/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
+++ b/webapp/front/front/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
@@ -44,7 +44,7 @@
                             <!-- Attendance Button -->
                             <div class="d-flex flex-column justify-content-center align-items-end">
                                 <button *ngIf="!willAttend" (click)="attendEvent()" class="accept-button outlined"
-                                    style="margin-top: 5px; font-size: 12px; font-weight: bold;">
+                                    style="margin-top: 5px; font-size: 12px; ">
                                     Attend
                                 </button>
                                 <button *ngIf="willAttend" (click)="unattendEvent()" class="ignore-button outlined"
