--- a/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
@@ -28,26 +28,32 @@
             </div>
 
             <!-- Date -->
-            <div class="col-md-4">
-                <label for="date">Date</label>
-                <input id="date" type="date" class="cool-input" formControlName="date" />
-                <div *ngIf="eventForm.controls['date'].invalid && eventForm.controls['date'].touched"
-                    class="form-error">
-                    Date is required.
+            <div class="f-c-c-c w-100">
+                <div class="">
+                    <label for="date" class="mb-1">Date</label>
+                    <input id="date" type="date" class="cool-input" formControlName="date" />
+                    <div *ngIf="eventForm.controls['date'].invalid && eventForm.controls['date'].touched"
+                        class="form-error">
+                        Date is required.
+                    </div>
+                </div>
+
+                <!-- Start Time and End Time -->
+                <div class="f-r-sb-c">
+                    <div class="col-6 pl-0">
+                        <label for="startTime" class="mb-1">Start Time</label>
+                        <input id="startTime" type="time" class="cool-input" formControlName="startTime" />
+                    </div>
+                    <div class="col-6 pr-0">
+                        <label for="endTime" class="mb-1">End Time</label>
+                        <input id="endTime" type="time" class="cool-input" formControlName="endTime" />
+                    </div>
+                </div>
+                <div *ngIf="eventForm.hasError('startBeforeEnd') && (eventForm.dirty || eventForm.touched)">
+                    <p class="error">Start Time must be earlier than End Time</p>
                 </div>
             </div>
 
-            <!-- Start Time and End Time -->
-            <div class="col-md-4 row">
-                <div class="col-6 pl-0">
-                    <label for="startTime">Start Time</label>
-                    <input id="startTime" type="time" class="cool-input" formControlName="startTime" />
-                </div>
-                <div class="col-6 pr-0">
-                    <label for="endTime">End Time</label>
-                    <input id="endTime" type="time" class="cool-input" formControlName="endTime" />
-                </div>
-            </div>
         </div>
 
         <!-- Submit Button -->
@@ -58,29 +64,4 @@
             </button>
         </div>
     </form>
-</div>
-
-<!-- Success Message -->
-<div *ngIf="showSuccessMessage" id="success-container" class="success-container">
-    <div class="cool-static-container small-size-container justify-content-around">
-        <div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 50 50" fill="none">
-                <g clip-path="url(#clip0_259_2)">
-                    <path
-                        d="M25 50C38.8071 50 50 38.8071 50 25C50 11.1929 38.8071 0 25 0C11.1929 0 0 11.1929 0 25C0 38.8071 11.1929 50 25 50Z"
-                        fill="green"></path>
-                    <path d="M38 15L22 33L12 25" stroke="white" stroke-width="2" stroke-miterlimit="10"
-                        stroke-linecap="round" stroke-linejoin="round"></path>
-                </g>
-                <defs>
-                    <clipPath id="clip0_259_2">
-                        <rect width="50" height="50" fill="white"></rect>
-                    </clipPath>
-                </defs>
-            </svg>
-        </div>
-        <div style="text-align:center;font-weight: bold; font-size: 24px; color:green">
-            Event created successfully!
-        </div>
-    </div>
 </div>
