--- a/webapp/front/front/src/app/features/calendar/calendar-page/calendar-page.component.html
+++ b/webapp/front/front/src/app/features/calendar/calendar-page/calendar-page.component.html
@@ -19,7 +19,10 @@
                         </div>
                         <div class="divider m-b-20"></div>
                         <!-- Include the events column component -->
-                        <app-calendar-events-column [selectedDate]="selectedDate"></app-calendar-events-column>
+                        <div class="w-100">
+                            <app-calendar-events-column [selectedDate]="selectedDate"></app-calendar-events-column>
+
+                        </div>
                     </div>
                 </div>
             </div>
