--- a/webapp/front/front/src/app/features/admin/admin-amenity-create-page/admin-amenity-create-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-amenity-create-page/admin-amenity-create-page.component.html
@@ -36,8 +36,6 @@
             <div class="cool-table w-100 p-4">
                 <table>
                     <tr>
-                        <th>Row</th>
-                        <!-- Header columns for unique days -->
                         <th *ngFor="let day of uniqueDays">
                             {{ getAbbreviatedDay(day) }}
                         </th>
@@ -55,11 +53,10 @@
                         <!-- For each day, show a cell you can toggle -->
                         <td *ngFor="let day of uniqueDays" [class.selected]="isShiftSelectedByDayTime(day, time)">
                             <div class="cell-wrapper" (click)="toggleCellSelection(day, time)">
-                                <!-- Invisible checkbox for accessibility -->
-                                <input type="checkbox" [checked]="isShiftSelectedByDayTime(day, time)"
-                                    class="hidden-checkbox" />
+                                {{ formatTime(time)}}
                             </div>
                         </td>
+
                     </tr>
                 </table>
             </div>
