--- a/webapp/front/front/src/app/features/admin/admin-neighbors-requests-page/admin-neighbors-requests-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-neighbors-requests-page/admin-neighbors-requests-page.component.html
@@ -14,7 +14,8 @@
             <div class="user-row">
                 <div class="f-r-s-c placeholder-glow">
                     <div>
-                        <img src="{{ user.image }}" class="big-profile-picture" style="width: 50px; height: 50px"
+                        <img [src]="user.image ? user.image : '/assets/images/default-profile.png'"
+                            class="big-profile-picture" style="width: 50px; height: 50px"
                             [alt]="'user_picture_img_' + user.self" />
                     </div>
                     <div class="information">
