--- a/webapp/front/front/src/app/features/feed/feed-page/feed-page.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-page/feed-page.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="" class=" body">
 
   <div style="position: absolute; width: 100%; height: 100%; top:0; left:0; z-index: 0">
-    <!-- <app-background-clouds></app-background-clouds> -->
+    <app-background-clouds></app-background-clouds>
 
     <app-navbar></app-navbar>
 
