--- a/webapp/front/front/src/app/shared/components/success-toast/success-toast.component.html
+++ b/webapp/front/front/src/app/shared/components/success-toast/success-toast.component.html
@@ -1,6 +1,6 @@
 <div class="toast" [ngClass]="toastClasses">
     <div class="toast-content">
         <span class="dot"></span>
-        <span class="message">{{ message }}</span>
+        <span class="message" style="line-height: 1.5;">{{ message }}</span>
     </div>
 </div>
